RESOLVED FIXED164489
[CSS Parser] Fix grid layout parsing
https://bugs.webkit.org/show_bug.cgi?id=164489
Summary [CSS Parser] Fix grid layout parsing
Dave Hyatt
Reported 2016-11-07 14:21:24 PST
[CSS Parser] Fix grid layout parsing
Attachments
Patch (12.86 KB, patch)
2016-11-07 14:24 PST, Dave Hyatt
dino: review+
Dave Hyatt
Comment 1 2016-11-07 14:24:48 PST
Dave Hyatt
Comment 2 2016-11-09 13:30:48 PST
Fixed in r208478.
Note You need to log in before you can comment on or make changes to this bug.